k8s/GLUEX/gluex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gluex-frontend
  namespace: osg-frontends
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      k8s-app: gluex-frontend
  template:
    metadata:
      labels:
        k8s-app: gluex-frontend
    spec:
      containers:
      - env:
        - name: VO_POOL
          value: "gremlin.phys.uconn.edu" 
        - name:  _CONDOR_TOOL_TIMEOUT_MULTIPLIER
          value: "100"
        - name: GWMS_FE_VS_REPO_1
          value: https://github.com/opensciencegrid/osg-flock.git
        name: gluex-frontend
        image: glideinwms/gwms-frontend:dev
        ports:
        - containerPort: 80 
        volumeMounts:
        - mountPath: /var/lib/gwms-frontend/web-area
          name: web-storage
        - mountPath: /etc/grid-security/gwms-frontend
          name: proxycerts-secret
          readOnly: true
        - mountPath: /etc/gwms-frontend/proxies.ini
          subPath: proxies.ini
          name: proxies-config
        - mountPath: /etc/gwms-frontend/frontend.xml.base
          subPath: frontend.xml.base
          name: fexml-config
        resources:
          limits:
            cpu: 1
            memory: 4Gi
          requests:
            cpu: 1
            memory: 2Gi
      restartPolicy: Always
      volumes:
        - name: web-storage
          persistentVolumeClaim:
            claimName: gluex-storage
        - name: proxycerts-secret
          secret:
            secretName: gluexproxycerts
            defaultMode: 0600      #Right File Permissions so can only be read by one node.
        - name: fexml-config
          configMap:
             name: gluex-fexml
             items:
             - key: frontend.xml.base
               path: frontend.xml.base
        - name : proxies-config
          configMap:
             defaultMode: 420
             items:
             - key: proxies.ini
               path: proxies.ini
             name: gluex-proxies-config
