k8s/GLUEX/gluex-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gluex-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: ""
  namespace: osg-frontends
spec:
  rules:
  - host: gluex-frontend.nautilus.optiputer.net
    http:
      paths:
      - backend:
          serviceName: gluex-service
          servicePort: 80
